# sentry-webhook

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
sentry-webhook/: app.py
